# core-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-test.yml  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml
api/: Dockerfile  entrypoint.sh
api/core/: asgi.py  settings.py  settings_tests.py  wsgi.py
career_skill_atlas/: asgi.py  docs_drf_yasg.py  drf_spectecular_router.py  settings.py  urls.py  wsgi.py
career_skill_atlas/config/: base_settings.py  test_settings.py
roadmap/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
roadmap/migrations/: 0001_initial.py  0001_initial_squashed_0004_alter_vertex_depends.py
roadmap/tests/: test_roadmap_search_endpoint.py
user/: admin.py  authentication.py  managers.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_alter_user_email.py
user/tests/: __init__.py  test_user_create_endpoint.py  test_user_delete_endpoint.py  test_user_get_endpoint.py  test_user_put_endpoint.py  tests_token_views.py
